# construction_ros_backup

construction_model/floor_feature_2/: CMakeLists.txt  package.xml
construction_model/floor_feature_3/: CMakeLists.txt  package.xml
construction_model/floor_feature_4/: CMakeLists.txt  package.xml
construction_model/floor_feature_5/: CMakeLists.txt  package.xml
construction_model/floor_feature_6/: CMakeLists.txt  package.xml
construction_model/house_combined_v1/: CMakeLists.txt  package.xml
construction_model/house_model/: CMakeLists.txt  package.xml
construction_model/house_model_v2/: CMakeLists.txt  package.xml
construction_model/house_model_v3/: CMakeLists.txt  package.xml
construction_model/main_stair/: CMakeLists.txt  package.xml
construction_model/main_stair_v2/: CMakeLists.txt  package.xml
construction_model/rack/: CMakeLists.txt  package.xml
construction_model/sand_floor/: CMakeLists.txt  package.xml
construction_model/sand_floor_v2/: CMakeLists.txt  package.xml
construction_model/sand_floor_v3/: CMakeLists.txt  package.xml
construction_model/sand_floor_v4/: CMakeLists.txt  package.xml
construction_model/sink/: CMakeLists.txt  package.xml
construction_model/sink-2/: CMakeLists.txt  package.xml
construction_model/sink/launch/: display.launch  gazebo.launch
construction_model/sink/urdf/: sink.csv  sink.urdf
gui/: construction_site_panel.py  control  teleop.py
mouse/: CMakeLists.txt  package.xml
mouse/src/: test.py  (+2 more)
mouse_click/: gz_ros.py  test.bash
mouse_click_plugin/: system_gui.cc
script/: first_task.bash  package.xml
(+165 files in other folders)
